guide: improve wording & style

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -1,23 +1,23 @@
-# Middlewares
+# Middleware
 
-Actix middlewares system allows to add additional behavior to request/response processing.
-Middleware can hook into incoming request process and modify request or halt request 
+Actix' middleware system allows to add additional behavior to request/response processing.
+Middleware can hook into incoming request process and modify request or halt request
 processing and return response early. Also it can hook into response processing.
 
-Typically middlewares involves in following actions:
+Typically middlewares are involved in the following actions:
 
 * Pre-process the Request
 * Post-process a Response
 * Modify application state
 * Access external services (redis, logging, sessions)
 
-Middlewares are registered for each application and get executed in same order as
-registration order. In general, *middleware* is a type that implements
+Middlewares are registered for each application and are executed in same order as
+registration order. In general, a *middleware* is a type that implements the
 [*Middleware trait*](../actix_web/middlewares/trait.Middleware.html). Each method
-in this trait has default implementation. Each method can return result immediately
-or *future* object.
+in this trait has a default implementation. Each method can return a result immediately
+or a *future* object.
 
-Here is example of simple middleware that adds request and response headers:
+Here is an example of a simple middleware that adds request and response headers:
 
 ```rust
 # extern crate http;
@@ -52,26 +52,26 @@ impl<S> Middleware<S> for Headers {
 
 fn main() {
     Application::new()
-       .middleware(Headers)  // <- Register middleware, this method could be called multiple times
+       .middleware(Headers)  // <- Register middleware, this method can be called multiple times
        .resource("/", |r| r.h(httpcodes::HttpOk));
 }
 ```
 
-Active provides several useful middlewares, like *logging*, *user sessions*, etc.
+Actix provides several useful middlewares, like *logging*, *user sessions*, etc.
 
 
 ## Logging
 
-Logging is implemented as middleware. 
-It is common to register logging middleware as first middleware for application. 
+Logging is implemented as a middleware.
+It is common to register a logging middleware as the first middleware for the application.
 Logging middleware has to be registered for each application. *Logger* middleware
-uses standard log crate to log information. You should enable logger for *actix_web*
-package to see access log. ([env_logger](https://docs.rs/env_logger/*/env_logger/) or similar)
+uses the standard log crate to log information. You should enable logger for *actix_web*
+package to see access log ([env_logger](https://docs.rs/env_logger/*/env_logger/) or similar).
 
 ### Usage
 
 Create `Logger` middleware with the specified `format`.
-Default `Logger` could be created with `default` method, it uses the default format:
+Default `Logger` can be created with `default` method, it uses the default format:
 
 ```ignore
   %a %t "%r" %s %b "%{Referer}i" "%{User-Agent}i" %T
@@ -93,7 +93,7 @@ fn main() {
 }
 ```
 
-Here is example of default logging format:
+Here is an example of the default logging format:
 
 ```
 INFO:actix_web::middleware::logger: 127.0.0.1:59934 [02/Dec/2017:00:21:43 -0800] "GET / HTTP/1.1" 302 0 "-" "curl/7.54.0" 0.000397
@@ -129,9 +129,9 @@ INFO:actix_web::middleware::logger: 127.0.0.1:59947 [02/Dec/2017:00:22:40 -0800]
 
 ## Default headers
 
-To set default response headers `DefaultHeaders` middleware could be used.
-*DefaultHeaders* middleware does not set header if response headers already contains
-specified header.
+To set default response headers the `DefaultHeaders` middleware can be used. The
+*DefaultHeaders* middleware does not set the header if response headers already contain
+the specified header.
 
 ```rust
 # extern crate actix_web;
@@ -153,16 +153,16 @@ fn main() {
 
 ## User sessions
 
-Actix provides general solution for session management. 
-[*Session storage*](../actix_web/middleware/struct.SessionStorage.html) middleware can be 
-use with different backend types to store session data in different backends. 
-By default only cookie session backend is implemented. Other backend implementations 
+Actix provides a general solution for session management. The
+[*Session storage*](../actix_web/middleware/struct.SessionStorage.html) middleware can be
+used with different backend types to store session data in different backends.
+By default only cookie session backend is implemented. Other backend implementations
 could be added later.
 
 [*Cookie session backend*](../actix_web/middleware/struct.CookieSessionBackend.html)
 uses signed cookies as session storage. *Cookie session backend* creates sessions which
 are limited to storing fewer than 4000 bytes of data (as the payload must fit into a
-single cookie). Internal server error get generated if session contains more than 4000 bytes.
+single cookie). Internal server error is generated if session contains more than 4000 bytes.
 
 You need to pass a random value to the constructor of *CookieSessionBackend*.
 This is private key for cookie session. When this value is changed, all session data is lost.
@@ -173,7 +173,7 @@ In general case, you create
 and initializes it with specific backend implementation, like *CookieSessionBackend*.
 To access session data
 [*HttpRequest::session()*](../actix_web/middleware/trait.RequestSession.html#tymethod.session)
-method has to be used. This method returns
+ has to be used. This method returns a
 [*Session*](../actix_web/middleware/struct.Session.html) object, which allows to get or set
 session data.
 
