--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -24,9 +24,9 @@ fn main() {
 
 ## Directory
 
-To serve files from specific directory and sub-directories `StaticFiles` could be used. 
+To serve files from specific directory and sub-directories `StaticFiles` could be used.
 `StaticFiles` must be registered with `Application::handler()` method otherwise
-it won't be able to server sub-paths.
+it won't be able to serve sub-paths.
 
 ```rust
 # extern crate actix_web;
@@ -44,6 +44,6 @@ directory listing would be returned for directories, if it is set to *false*
 then *404 Not Found* would be returned instead of directory listing.
 
 Instead of showing files listing for directory, it is possible to redirect to specific
-index file. Use 
+index file. Use
 [*StaticFiles::index_file()*](../actix_web/s/struct.StaticFiles.html#method.index_file)
 method to configure this redirect.
