--- a/guide/src/qs_13.md
+++ b/guide/src/qs_13.md
@@ -6,8 +6,8 @@ Actix web automatically upgrades connection to *HTTP/2.0* if possible.
 
 *HTTP/2.0* protocol over tls without prior knowledge requires
 [tls alpn](https://tools.ietf.org/html/rfc7301). At the moment only
-`rust-openssl` has support. Turn on `alpn` feature to enable `alpn` negotiation.
-With enable `alpn` feature `HttpServer` provides
+`rust-openssl` has support. Turn on the `alpn` feature to enable `alpn` negotiation.
+With enabled `alpn` feature `HttpServer` provides the
 [serve_tls](../actix_web/struct.HttpServer.html#method.serve_tls) method.
 
 ```toml
@@ -40,5 +40,5 @@ Upgrade to *HTTP/2.0* schema described in
 Starting *HTTP/2* with prior knowledge is supported for both clear text connection
 and tls connection. [rfc section 3.4](https://http2.github.io/http2-spec/#rfc.section.3.4)
 
-Please check [example](https://github.com/actix/actix-web/tree/master/examples/tls) 
-for concrete example.
+Please check [example](https://github.com/actix/actix-web/tree/master/examples/tls)
+for a concrete example.
