--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -3,13 +3,13 @@
 ## Diesel
 
 At the moment of 1.0 release Diesel does not support asynchronous operations.
-But it possible to use `actix` synchronous actor system as a db interface api.
+But it possible to use the `actix` synchronous actor system as a db interface api.
 Technically sync actors are worker style actors, multiple of them
-can be run in parallel and process messages from same queue (sync actors work in mpmc mode).
+can be run in parallel and process messages from same queue (sync actors work in mpsc mode).
 
-Let's create simple db api that can insert new user row into sqlite table.
-We have to define sync actor and connection that this actor will use. Same approach
-could be used for other databases.
+Let's create a simple db api that can insert a new user row into an SQLite table.
+We have to define sync actor and connection that this actor will use. The same approach
+can be used for other databases.
 
 ```rust,ignore
 use actix::prelude::*;
@@ -21,7 +21,7 @@ impl Actor for DbExecutor {
 }
 ```
 
-This is definition of our actor. Now we need to define *create user* message and response.
+This is the definition of our actor. Now we need to define the *create user* message and response.
 
 ```rust,ignore
 struct CreateUser {
@@ -33,8 +33,8 @@ impl Message for CreateUser {
 }
 ```
 
-We can send `CreateUser` message to `DbExecutor` actor, and as result we get
-`User` model. Now we need to define actual handler implementation for this message.
+We can send a `CreateUser` message to the `DbExecutor` actor, and as a result we get a
+`User` model instance. Now we need to define the actual handler implementation for this message.
 
 ```rust,ignore
 impl Handler<CreateUser> for DbExecutor {
@@ -67,8 +67,8 @@ impl Handler<CreateUser> for DbExecutor {
 }
 ```
 
-That is it. Now we can use *DbExecutor* actor from any http handler or middleware.
-All we need is to start *DbExecutor* actors and store address in a state where http handler 
+That's it. Now we can use the *DbExecutor* actor from any http handler or middleware.
+All we need is to start *DbExecutor* actors and store the address in a state where http handler
 can access it.
 
 ```rust,ignore
@@ -97,8 +97,8 @@ fn main() {
 }
 ```
 
-And finally we can use address in a request handler. We get message response
-asynchronously, so handler needs to return future object, also `Route::a()` needs to be 
+And finally we can use the address in a request handler. We get a message response
+asynchronously, so the handler needs to return a future object, also `Route::a()` needs to be
 used for async handler registration.
 
 
@@ -120,8 +120,8 @@ fn index(req: HttpRequest<State>) -> Box<Future<Item=HttpResponse, Error=Error>>
 }
 ```
 
-Full example is available in 
+Full example is available in the
 [examples directory](https://github.com/actix/actix-web/tree/master/examples/diesel/).
 
-More information on sync actors could be found in 
+More information on sync actors can be found in the
 [actix documentation](https://docs.rs/actix/0.5.0/actix/sync/index.html).
