--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -1,13 +1,13 @@
 # Server
 
-[*HttpServer*](../actix_web/struct.HttpServer.html) type is responsible for
-serving http requests. *HttpServer* accept application factory as a parameter,
-Application factory must have `Send` + `Sync` boundaries. More about that in
-*multi-threading* section. To bind to specific socket address `bind()` must be used.
-This method could be called multiple times. To start http server one of the *start*
-methods could be used. `start()` method start simple server, `start_tls()` or `start_ssl()`
+The [*HttpServer*](../actix_web/struct.HttpServer.html) type is responsible for
+serving http requests. *HttpServer* accepts application factory as a parameter,
+Application factory must have `Send` + `Sync` boundaries. More about that in the
+*multi-threading* section. To bind to a specific socket address, `bind()` must be used.
+This method can be called multiple times. To start the http server, one of the *start*
+methods can be used. `start()` method starts a simple server, `start_tls()` or `start_ssl()`
 starts ssl server. *HttpServer* is an actix actor, it has to be initialized
-within properly configured actix system:
+within a properly configured actix system:
 
 ```rust
 # extern crate actix;
@@ -29,13 +29,13 @@ fn main() {
 }
 ```
 
-It is possible to start server in separate thread with *spawn()* method. In that
-case server spawns new thread and create new actix system in it. To stop
-this server send `StopServer` message.
+It is possible to start a server in a separate thread with the *spawn()* method. In that
+case the server spawns a new thread and creates a new actix system in it. To stop
+this server, send a `StopServer` message.
 
-Http server is implemented as an actix actor. It is possible to communicate with server
-via messaging system. All start methods like `start()`, `start_ssl()`, etc returns
-address of the started http server. Actix http server accept several messages:
+Http server is implemented as an actix actor. It is possible to communicate with the server
+via a messaging system. All start methods like `start()`, `start_ssl()`, etc. return the
+address of the started http server. Actix http server accepts several messages:
 
 * `PauseServer` - Pause accepting incoming connections
 * `ResumeServer` - Resume accepting incoming connections
@@ -73,9 +73,9 @@ fn main() {
 
 ## Multi-threading
 
-Http server automatically starts number of http workers, by default
-this number is equal to number of logical cpu in the system. This number
-could be overridden with `HttpServer::threads()` method.
+Http server automatically starts an number of http workers, by default
+this number is equal to number of logical CPUs in the system. This number
+can be overridden with the `HttpServer::threads()` method.
 
 ```rust
 # extern crate actix_web;
@@ -90,13 +90,13 @@ fn main() {
 }
 ```
 
-Server create separate application instance for each created worker. Application state
+The server creates a separate application instance for each created worker. Application state
 is not shared between threads, to share state `Arc` could be used. Application state
 does not need to be `Send` and `Sync` but application factory must be `Send` + `Sync`.
 
 ## SSL
 
-There are two `tls` and `alpn` features for ssl server. `tls` feature is for `native-tls`
+There are two features for ssl server: `tls` and `alpn`. The `tls` feature is for `native-tls`
 integration and `alpn` is for `openssl`.
 
 ```toml
@@ -127,7 +127,7 @@ Note on *HTTP/2.0* protocol over tls without prior knowledge, it requires
 `openssl` has `alpn ` support.
 
 Please check [example](https://github.com/actix/actix-web/tree/master/examples/tls)
-for full example.
+for a full example.
 
 ## Keep-Alive
 
@@ -162,13 +162,13 @@ fn main() {
 }
 ```
 
-If first option is selected then *keep alive* state
-calculated based on response's *connection-type*. By default
+If first option is selected then *keep alive* state is
+calculated based on the response's *connection-type*. By default
 `HttpResponse::connection_type` is not defined in that case *keep alive*
 defined by request's http version. Keep alive is off for *HTTP/1.0*
 and is on for *HTTP/1.1* and *HTTP/2.0*.
 
-*Connection type* could be change with `HttpResponseBuilder::connection_type()` method.
+*Connection type* can be change with `HttpResponseBuilder::connection_type()` method.
 
 ```rust
 # extern crate actix_web;
@@ -186,13 +186,13 @@ fn index(req: HttpRequest) -> HttpResponse {
 
 ## Graceful shutdown
 
-Actix http server support graceful shutdown. After receiving a stop signal, workers
-have specific amount of time to finish serving requests. Workers still alive after the
-timeout are force dropped. By default shutdown timeout sets to 30 seconds.
-You can change this parameter with `HttpServer::shutdown_timeout()` method.
+Actix http server supports graceful shutdown. After receiving a stop signal, workers
+have a specific amount of time to finish serving requests. Workers still alive after the
+timeout are force-dropped. By default the shutdown timeout is set to 30 seconds.
+You can change this parameter with the `HttpServer::shutdown_timeout()` method.
 
-You can send stop message to server with server address and specify if you what
-graceful shutdown or not. `start()` methods return address of the server.
+You can send a stop message to the server with the server address and specify if you want
+graceful shutdown or not. The `start()` methods return address of the server.
 
 Http server handles several OS signals. *CTRL-C* is available on all OSs,
 other signals are available on unix systems.
@@ -201,4 +201,4 @@ other signals are available on unix systems.
 * *SIGTERM* - Graceful shutdown workers
 * *SIGQUIT* - Force shutdown workers
 
-It is possible to disable signals handling with `HttpServer::disable_signals()` method.
+It is possible to disable signal handling with `HttpServer::disable_signals()` method.
