--- a/guide/src/qs_4_5.md
+++ b/guide/src/qs_4_5.md
@@ -1,20 +1,20 @@
 # Errors
 
-Actix uses [`Error` type](../actix_web/error/struct.Error.html) 
-and [`ResponseError` trait](../actix_web/error/trait.ResponseError.html) 
+Actix uses [`Error` type](../actix_web/error/struct.Error.html)
+and [`ResponseError` trait](../actix_web/error/trait.ResponseError.html)
 for handling handler's errors.
-Any error that implements `ResponseError` trait can be returned as error value.
-*Handler* can return *Result* object, actix by default provides 
-`Responder` implementation for compatible result types. Here is implementation
+Any error that implements the `ResponseError` trait can be returned as an error value.
+*Handler* can return an *Result* object; actix by default provides
+`Responder` implementation for compatible result types. Here is the implementation
 definition:
 
 ```rust,ignore
 impl<T: Responder, E: Into<Error>> Responder for Result<T, E>
 ```
 
-And any error that implements `ResponseError` can be converted into `Error` object.
-For example if *handler* function returns `io::Error`, it would be converted
-into `HttpInternalServerError` response. Implementation for `io::Error` is provided 
+And any error that implements `ResponseError` can be converted into an `Error` object.
+For example, if the *handler* function returns `io::Error`, it would be converted
+into an `HttpInternalServerError` response. Implementation for `io::Error` is provided
 by default.
 
 ```rust
@@ -35,9 +35,9 @@ fn index(req: HttpRequest) -> io::Result<fs::NamedFile> {
 
 ## Custom error response
 
-To add support for custom errors, all we need to do is just implement `ResponseError` trait
-for custom error. `ResponseError` trait has default implementation
-for `error_response()` method, it generates *500* response.
+To add support for custom errors, all we need to do is just implement the `ResponseError` trait
+for the custom error type. The `ResponseError` trait has a default implementation
+for the `error_response()` method: it generates a *500* response.
 
 ```rust
 # extern crate actix_web;
@@ -64,8 +64,8 @@ fn index(req: HttpRequest) -> Result<&'static str, MyError> {
 # }
 ```
 
-In this example *index* handler always returns *500* response. But it is easy
-to return different responses for different type of errors.
+In this example the *index* handler always returns a *500* response. But it is easy
+to return different responses for different types of errors.
 
 ```rust
 # extern crate actix_web;
@@ -108,7 +108,7 @@ fn index(req: HttpRequest) -> Result<&'static str, MyError> {
 
 ## Error helpers
 
-Actix provides set of error helper types. It is possible to use them to generate
+Actix provides a set of error helper types. It is possible to use them for generating
 specific error responses. We can use helper types for the first example with custom error.
 
 ```rust
@@ -123,7 +123,7 @@ struct MyError {
 
 fn index(req: HttpRequest) -> Result<&'static str> {
     let result: Result<&'static str, MyError> = Err(MyError{name: "test"});
-    
+
     Ok(result.map_err(|e| error::ErrorBadRequest(e))?)
 }
 # fn main() {
@@ -133,18 +133,18 @@ fn index(req: HttpRequest) -> Result<&'static str> {
 # }
 ```
 
-In this example *BAD REQUEST* response get generated for `MyError` error.
+In this example, a *BAD REQUEST* response is generated for the `MyError` error.
 
 ## Error logging
 
-Actix logs all errors with `WARN` log level. If log level set to `DEBUG`
-and `RUST_BACKTRACE` is enabled, backtrace get logged. The Error type uses
-cause's error backtrace if available, if the underlying failure does not provide
+Actix logs all errors with the log level `WARN`. If log level set to `DEBUG`
+and `RUST_BACKTRACE` is enabled, the backtrace gets logged. The Error type uses
+the cause's error backtrace if available. If the underlying failure does not provide
 a backtrace, a new backtrace is constructed pointing to that conversion point
 (rather than the origin of the error). This construction only happens if there
-is no underlying backtrace; if it does have a backtrace no new backtrace is constructed.
+is no underlying backtrace; if it does have a backtrace, no new backtrace is constructed.
 
-You can enable backtrace and debug logging with following command: 
+You can enable backtrace and debug logging with following command:
 
 ```
 >> RUST_BACKTRACE=1 RUST_LOG=actix_web=debug cargo run
