re-arrange modules and exports

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -23,7 +23,7 @@ Here is an example of a simple middleware that adds request and response headers
 # extern crate http;
 # extern crate actix_web;
 use http::{header, HttpTryFrom};
-use actix_web::*;
+use actix_web::{Application, HttpRequest, HttpResponse, Result, httpcodes};
 use actix_web::middleware::{Middleware, Started, Response};
 
 struct Headers;  // <- Our middleware
@@ -135,7 +135,7 @@ the specified header.
 
 ```rust
 # extern crate actix_web;
-use actix_web::*;
+use actix_web::{Application, http, httpcodes, middleware};
 
 fn main() {
     let app = Application::new()
@@ -144,8 +144,8 @@ fn main() {
                 .header("X-Version", "0.2")
                 .finish())
         .resource("/test", |r| {
-             r.method(Method::GET).f(|req| httpcodes::HttpOk);
-             r.method(Method::HEAD).f(|req| httpcodes::HttpMethodNotAllowed);
+             r.method(http::Method::GET).f(|req| httpcodes::HttpOk);
+             r.method(http::Method::HEAD).f(|req| httpcodes::HttpMethodNotAllowed);
         })
        .finish();
 }
