--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -7,12 +7,12 @@ match path tail we can use `[.*]` regex.
 
 ```rust
 # extern crate actix_web;
-use actix_web::*;
 use std::path::PathBuf;
+use actix_web::{Application, HttpRequest, Result, http::Method, fs::NamedFile};
 
-fn index(req: HttpRequest) -> Result<fs::NamedFile> {
+fn index(req: HttpRequest) -> Result<NamedFile> {
     let path: PathBuf = req.match_info().query("tail")?;
-    Ok(fs::NamedFile::open(path)?)
+    Ok(NamedFile::open(path)?)
 }
 
 fn main() {
