--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -172,11 +172,11 @@ and is on for *HTTP/1.1* and *HTTP/2.0*.
 
 ```rust
 # extern crate actix_web;
-use actix_web::{header, HttpRequest, HttpResponse, httpcodes::HttpOk};
+use actix_web::{HttpRequest, HttpResponse, http, httpcodes::HttpOk};
 
 fn index(req: HttpRequest) -> HttpResponse {
     HttpOk.build()
-        .connection_type(header::ConnectionType::Close) // <- Close connection
+        .connection_type(http::ConnectionType::Close) // <- Close connection
         .force_close()                                   // <- Alternative method
         .finish().unwrap()
 }
