--- a/guide/src/qs_4_5.md
+++ b/guide/src/qs_4_5.md
@@ -70,7 +70,7 @@ to return different responses for different types of errors.
 ```rust
 # extern crate actix_web;
 #[macro_use] extern crate failure;
-use actix_web::*;
+use actix_web::{Application, Body, HttpRequest, HttpResponse, http, error};
 
 #[derive(Fail, Debug)]
 enum MyError {
@@ -86,11 +86,11 @@ impl error::ResponseError for MyError {
     fn error_response(&self) -> HttpResponse {
        match *self {
           MyError::InternalError => HttpResponse::new(
-              StatusCode::INTERNAL_SERVER_ERROR, Body::Empty),
+              http::StatusCode::INTERNAL_SERVER_ERROR, Body::Empty),
           MyError::BadClientData => HttpResponse::new(
-              StatusCode::BAD_REQUEST, Body::Empty),
+              http::StatusCode::BAD_REQUEST, Body::Empty),
           MyError::Timeout => HttpResponse::new(
-              StatusCode::GATEWAY_TIMEOUT, Body::Empty),
+              http::StatusCode::GATEWAY_TIMEOUT, Body::Empty),
        }
     }
 }
