simplify http response construction; deprecate httpcodes

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -23,7 +23,7 @@ Here is an example of a simple middleware that adds request and response headers
 # extern crate http;
 # extern crate actix_web;
 use http::{header, HttpTryFrom};
-use actix_web::{Application, HttpRequest, HttpResponse, Result, httpcodes};
+use actix_web::{Application, HttpRequest, HttpResponse, Result};
 use actix_web::middleware::{Middleware, Started, Response};
 
 struct Headers;  // <- Our middleware
@@ -53,7 +53,7 @@ impl<S> Middleware<S> for Headers {
 fn main() {
     Application::new()
        .middleware(Headers)  // <- Register middleware, this method can be called multiple times
-       .resource("/", |r| r.h(httpcodes::HttpOk));
+       .resource("/", |r| r.f(|_| HttpResponse::Ok()));
 }
 ```
 
@@ -135,7 +135,7 @@ the specified header.
 
 ```rust
 # extern crate actix_web;
-use actix_web::{Application, http, httpcodes, middleware};
+use actix_web::{http, middleware, Application, HttpResponse};
 
 fn main() {
     let app = Application::new()
@@ -144,8 +144,8 @@ fn main() {
                 .header("X-Version", "0.2")
                 .finish())
         .resource("/test", |r| {
-             r.method(http::Method::GET).f(|req| httpcodes::HttpOk);
-             r.method(http::Method::HEAD).f(|req| httpcodes::HttpMethodNotAllowed);
+             r.method(http::Method::GET).f(|req| HttpResponse::Ok());
+             r.method(http::Method::HEAD).f(|req| HttpResponse::MethodNotAllowed());
         })
        .finish();
 }
