--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -13,14 +13,14 @@ within a properly configured actix system:
 # extern crate actix;
 # extern crate actix_web;
 use actix::*;
-use actix_web::*;
+use actix_web::{server, Application, HttpResponse};
 
 fn main() {
     let sys = actix::System::new("guide");
 
-    HttpServer::new(
+    server::new(
         || Application::new()
-            .resource("/", |r| r.h(httpcodes::HttpOk)))
+            .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .bind("127.0.0.1:59080").unwrap()
         .start();
 
@@ -46,18 +46,19 @@ address of the started http server. Actix http server accepts several messages:
 # extern crate actix;
 # extern crate actix_web;
 # use futures::Future;
-use actix_web::*;
 use std::thread;
 use std::sync::mpsc;
+use actix::*;
+use actix_web::{server, Application, HttpResponse, HttpServer};
 
 fn main() {
     let (tx, rx) = mpsc::channel();
 
     thread::spawn(move || {
         let sys = actix::System::new("http-server");
-        let addr = HttpServer::new(
+        let addr = server::new(
             || Application::new()
-                .resource("/", |r| r.h(httpcodes::HttpOk)))
+                .resource("/", |r| r.f(|_| HttpResponse::Ok())))
             .bind("127.0.0.1:0").expect("Can not bind to 127.0.0.1:0")
             .shutdown_timeout(60)    // <- Set shutdown timeout to 60 seconds
             .start();
@@ -80,12 +81,12 @@ can be overridden with the `HttpServer::threads()` method.
 ```rust
 # extern crate actix_web;
 # extern crate tokio_core;
-use actix_web::*;
+use actix_web::{Application, HttpServer, HttpResponse};
 
 fn main() {
     HttpServer::new(
         || Application::new()
-            .resource("/", |r| r.h(httpcodes::HttpOk)))
+            .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .threads(4); // <- Start 4 workers
 }
 ```
@@ -109,16 +110,16 @@ use std::fs::File;
 use actix_web::*;
 
 fn main() {
-    let mut file = File::open("identity.pfx").unwrap();
-    let mut pkcs12 = vec![];
-    file.read_to_end(&mut pkcs12).unwrap();
-    let pkcs12 = Pkcs12::from_der(&pkcs12).unwrap().parse("12345").unwrap();
+    // load ssl keys
+    let mut builder = SslAcceptor::mozilla_intermediate(SslMethod::tls()).unwrap();
+    builder.set_private_key_file("key.pem", SslFiletype::PEM).unwrap();
+    builder.set_certificate_chain_file("cert.pem").unwrap();
 
     HttpServer::new(
         || Application::new()
             .resource("/index.html", |r| r.f(index)))
         .bind("127.0.0.1:8080").unwrap()
-        .serve_ssl(pkcs12).unwrap();
+        .serve_ssl(builder).unwrap();
 }
 ```
 
@@ -142,22 +143,22 @@ connection behavior is defined by server settings.
 ```rust
 # extern crate actix_web;
 # extern crate tokio_core;
-use actix_web::*;
+use actix_web::{server, Application, HttpResponse};
 
 fn main() {
-    HttpServer::new(||
+    server::new(||
         Application::new()
-            .resource("/", |r| r.h(httpcodes::HttpOk)))
+            .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .keep_alive(75); // <- Set keep-alive to 75 seconds
 
-    HttpServer::new(||
+    server::new(||
         Application::new()
-            .resource("/", |r| r.h(httpcodes::HttpOk)))
+            .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .keep_alive(server::KeepAlive::Tcp(75)); // <- Use `SO_KEEPALIVE` socket option.
 
-    HttpServer::new(||
+    server::new(||
         Application::new()
-            .resource("/", |r| r.h(httpcodes::HttpOk)))
+            .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .keep_alive(None); // <- Disable keep-alive
 }
 ```
@@ -172,13 +173,13 @@ and is on for *HTTP/1.1* and *HTTP/2.0*.
 
 ```rust
 # extern crate actix_web;
-use actix_web::{HttpRequest, HttpResponse, http, httpcodes::HttpOk};
+use actix_web::{HttpRequest, HttpResponse, http};
 
 fn index(req: HttpRequest) -> HttpResponse {
-    HttpOk.build()
+    HttpResponse::Ok()
         .connection_type(http::ConnectionType::Close) // <- Close connection
-        .force_close()                                   // <- Alternative method
-        .finish().unwrap()
+        .force_close()                                // <- Alternative method
+        .finish()
 }
 # fn main() {}
 ```
