--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -23,7 +23,7 @@ Here is an example of a simple middleware that adds request and response headers
 # extern crate http;
 # extern crate actix_web;
 use http::{header, HttpTryFrom};
-use actix_web::{Application, HttpRequest, HttpResponse, Result};
+use actix_web::{App, HttpRequest, HttpResponse, Result};
 use actix_web::middleware::{Middleware, Started, Response};
 
 struct Headers;  // <- Our middleware
@@ -51,7 +51,7 @@ impl<S> Middleware<S> for Headers {
 }
 
 fn main() {
-    Application::new()
+    App::new()
        .middleware(Headers)  // <- Register middleware, this method can be called multiple times
        .resource("/", |r| r.f(|_| HttpResponse::Ok()));
 }
@@ -79,14 +79,14 @@ Default `Logger` can be created with `default` method, it uses the default forma
 ```rust
 # extern crate actix_web;
 extern crate env_logger;
-use actix_web::Application;
+use actix_web::App;
 use actix_web::middleware::Logger;
 
 fn main() {
     std::env::set_var("RUST_LOG", "actix_web=info");
     env_logger::init();
 
-    Application::new()
+    App::new()
        .middleware(Logger::default())
        .middleware(Logger::new("%a %{User-Agent}i"))
        .finish();
@@ -135,10 +135,10 @@ the specified header.
 
 ```rust
 # extern crate actix_web;
-use actix_web::{http, middleware, Application, HttpResponse};
+use actix_web::{http, middleware, App, HttpResponse};
 
 fn main() {
-    let app = Application::new()
+    let app = App::new()
         .middleware(
             middleware::DefaultHeaders::build()
                 .header("X-Version", "0.2")
@@ -198,7 +198,7 @@ fn index(mut req: HttpRequest) -> Result<&'static str> {
 fn main() {
 #   let sys = actix::System::new("basic-example");
     HttpServer::new(
-        || Application::new()
+        || App::new()
             .middleware(SessionStorage::new(          // <- create session middleware
                 CookieSessionBackend::build(&[0; 32]) // <- create cookie session backend
                     .secure(false)
