--- a/guide/src/qs_12.md
+++ b/guide/src/qs_12.md
@@ -8,7 +8,7 @@ match path tail we can use `[.*]` regex.
 ```rust
 # extern crate actix_web;
 use std::path::PathBuf;
-use actix_web::{Application, HttpRequest, Result, http::Method, fs::NamedFile};
+use actix_web::{App, HttpRequest, Result, http::Method, fs::NamedFile};
 
 fn index(req: HttpRequest) -> Result<NamedFile> {
     let path: PathBuf = req.match_info().query("tail")?;
@@ -16,7 +16,7 @@ fn index(req: HttpRequest) -> Result<NamedFile> {
 }
 
 fn main() {
-    Application::new()
+    App::new()
         .resource(r"/a/{tail:.*}", |r| r.method(Method::GET).f(index))
         .finish();
 }
@@ -25,7 +25,7 @@ fn main() {
 ## Directory
 
 To serve files from specific directory and sub-directories `StaticFiles` could be used.
-`StaticFiles` must be registered with `Application::handler()` method otherwise
+`StaticFiles` must be registered with `App::handler()` method otherwise
 it won't be able to serve sub-paths.
 
 ```rust
@@ -33,7 +33,7 @@ it won't be able to serve sub-paths.
 use actix_web::*;
 
 fn main() {
-    Application::new()
+    App::new()
         .handler("/static", fs::StaticFiles::new(".", true))
         .finish();
 }
