--- a/guide/src/qs_13.md
+++ b/guide/src/qs_13.md
@@ -28,7 +28,7 @@ fn main() {
     builder.set_certificate_chain_file("cert.pem").unwrap();
 
     HttpServer::new(
-        || Application::new()
+        || App::new()
             .resource("/index.html", |r| r.f(index)))
         .bind("127.0.0.1:8080").unwrap();
         .serve_ssl(builder).unwrap();
