--- a/guide/src/qs_14.md
+++ b/guide/src/qs_14.md
@@ -87,7 +87,7 @@ fn main() {
 
     // Start http server
     HttpServer::new(move || {
-        Application::with_state(State{db: addr.clone()})
+        App::with_state(State{db: addr.clone()})
             .resource("/{name}", |r| r.method(Method::GET).a(index))})
         .bind("127.0.0.1:8080").unwrap()
         .start().unwrap();
