--- a/guide/src/qs_4_5.md
+++ b/guide/src/qs_4_5.md
@@ -27,7 +27,7 @@ fn index(req: HttpRequest) -> io::Result<fs::NamedFile> {
 }
 #
 # fn main() {
-#     Application::new()
+#     App::new()
 #         .resource(r"/a/index.html", |r| r.f(index))
 #         .finish();
 # }
@@ -58,7 +58,7 @@ fn index(req: HttpRequest) -> Result<&'static str, MyError> {
 }
 #
 # fn main() {
-#     Application::new()
+#     App::new()
 #         .resource(r"/a/index.html", |r| r.f(index))
 #         .finish();
 # }
@@ -70,7 +70,7 @@ to return different responses for different types of errors.
 ```rust
 # extern crate actix_web;
 #[macro_use] extern crate failure;
-use actix_web::{Application, HttpRequest, HttpResponse, http, error};
+use actix_web::{App, HttpRequest, HttpResponse, http, error};
 
 #[derive(Fail, Debug)]
 enum MyError {
@@ -100,7 +100,7 @@ fn index(req: HttpRequest) -> Result<&'static str, MyError> {
 }
 #
 # fn main() {
-#     Application::new()
+#     App::new()
 #         .resource(r"/a/index.html", |r| r.f(index))
 #         .finish();
 # }
@@ -127,7 +127,7 @@ fn index(req: HttpRequest) -> Result<&'static str> {
     Ok(result.map_err(|e| error::ErrorBadRequest(e))?)
 }
 # fn main() {
-#     Application::new()
+#     App::new()
 #         .resource(r"/a/index.html", |r| r.f(index))
 #         .finish();
 # }
