--- a/guide/src/qs_3_5.md
+++ b/guide/src/qs_3_5.md
@@ -13,13 +13,13 @@ within a properly configured actix system:
 # extern crate actix;
 # extern crate actix_web;
 use actix::*;
-use actix_web::{server, Application, HttpResponse};
+use actix_web::{server, App, HttpResponse};
 
 fn main() {
     let sys = actix::System::new("guide");
 
     server::new(
-        || Application::new()
+        || App::new()
             .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .bind("127.0.0.1:59080").unwrap()
         .start();
@@ -49,7 +49,7 @@ address of the started http server. Actix http server accepts several messages:
 use std::thread;
 use std::sync::mpsc;
 use actix::*;
-use actix_web::{server, Application, HttpResponse, HttpServer};
+use actix_web::{server, App, HttpResponse, HttpServer};
 
 fn main() {
     let (tx, rx) = mpsc::channel();
@@ -57,7 +57,7 @@ fn main() {
     thread::spawn(move || {
         let sys = actix::System::new("http-server");
         let addr = server::new(
-            || Application::new()
+            || App::new()
                 .resource("/", |r| r.f(|_| HttpResponse::Ok())))
             .bind("127.0.0.1:0").expect("Can not bind to 127.0.0.1:0")
             .shutdown_timeout(60)    // <- Set shutdown timeout to 60 seconds
@@ -81,11 +81,11 @@ can be overridden with the `HttpServer::threads()` method.
 ```rust
 # extern crate actix_web;
 # extern crate tokio_core;
-use actix_web::{Application, HttpServer, HttpResponse};
+use actix_web::{App, HttpServer, HttpResponse};
 
 fn main() {
     HttpServer::new(
-        || Application::new()
+        || App::new()
             .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .threads(4); // <- Start 4 workers
 }
@@ -116,7 +116,7 @@ fn main() {
     builder.set_certificate_chain_file("cert.pem").unwrap();
 
     HttpServer::new(
-        || Application::new()
+        || App::new()
             .resource("/index.html", |r| r.f(index)))
         .bind("127.0.0.1:8080").unwrap()
         .serve_ssl(builder).unwrap();
@@ -143,21 +143,21 @@ connection behavior is defined by server settings.
 ```rust
 # extern crate actix_web;
 # extern crate tokio_core;
-use actix_web::{server, Application, HttpResponse};
+use actix_web::{server, App, HttpResponse};
 
 fn main() {
     server::new(||
-        Application::new()
+        App::new()
             .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .keep_alive(75); // <- Set keep-alive to 75 seconds
 
     server::new(||
-        Application::new()
+        App::new()
             .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .keep_alive(server::KeepAlive::Tcp(75)); // <- Use `SO_KEEPALIVE` socket option.
 
     server::new(||
-        Application::new()
+        App::new()
             .resource("/", |r| r.f(|_| HttpResponse::Ok())))
         .keep_alive(None); // <- Disable keep-alive
 }
