simplify DefaultHeaders middleware

--- a/guide/src/qs_10.md
+++ b/guide/src/qs_10.md
@@ -140,9 +140,8 @@ use actix_web::{http, middleware, App, HttpResponse};
 fn main() {
     let app = App::new()
         .middleware(
-            middleware::DefaultHeaders::build()
-                .header("X-Version", "0.2")
-                .finish())
+            middleware::DefaultHeaders::new()
+                .header("X-Version", "0.2"))
         .resource("/test", |r| {
              r.method(http::Method::GET).f(|req| HttpResponse::Ok());
              r.method(http::Method::HEAD).f(|req| HttpResponse::MethodNotAllowed());
